force-app/main/default/objects/Equipment__c/fields/Equipment_Order__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment Order</label>
    <referenceTo>Equipment_Order__c</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>