force-app/main/default/objects/Equipment__c/fields/HCPC_Codes__c.field-meta.xml
<CustomField>
    <fullName>HCPC_Codes__c</fullName>
    <label>HCPC Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>