force-app/main/default/objects/Equipment__c/fields/ICDs__c.field-meta.xml
<CustomField>
    <fullName>ICDs__c</fullName>
    <label>ICDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>