force-app/main/default/objects/Equipment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Equipments</relationshipLabel>
    <relationshipName>Equipments</relationshipName>
    <type>Lookup</type>
</CustomField>