force-app/main/default/objects/Equipment__c/fields/Properties__c.field-meta.xml
<CustomField>
    <fullName>Properties__c</fullName>
    <label>Properties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>