force-app/main/default/objects/Equipment__c/fields/Refill_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refill_Amount__c</fullName>
    <label>Refill Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>